[gd_scene load_steps=5 format=3 uid="uid://blini5ubvjgjr"]

[ext_resource type="Script" path="res://Weapon--Fists/fists.gd" id="1_o5pln"]
[ext_resource type="Texture2D" uid="uid://baq6vpey2rpqx" path="res://GamePlay--Textures/New Piskel-1.png.png" id="1_r3ok2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmdch"]
size = Vector2(17, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0vgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_r3ok2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Fists" type="Area2D"]
script = ExtResource("1_o5pln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rmdch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c0vgk")

[node name="displayTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="inputBuffer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="displayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="timeout" from="inputBuffer" to="." method="_on_input_buffer_timeout"]
